Курсовая 6 сем ПА - Компилятор/gen/expl0Parser.py
# Generated from C:/Users/Evgenia/Desktop/Курсовая работа/expl0.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class expl0Parser ( Parser ):

    grammarFileName = "expl0.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'='", "','", "';'", "':'", "'integer'", 
                     "'real'", "':='", "'*'", "'/'", "'+'", "'-'", "'<>'", 
                     "'>'", "'<'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "LPAREN", "RPAREN", "WS", "ID", "NUMBER", "CONST", 
                      "VAR", "PROCEDURE", "CALL", "BEGIN", "END", "IF", 
                      "THEN", "ELSE", "WHILE", "DO", "ODD", "WRITE" ]

    RULE_program = 0
    RULE_const = 1
    RULE_var = 2
    RULE_procedure = 3
    RULE_block = 4
    RULE_statement = 5
    RULE_assign = 6
    RULE_expression = 7
    RULE_call = 8
    RULE_write = 9
    RULE_ifthen = 10
    RULE_ifthenelse = 11
    RULE_whiledo = 12
    RULE_condition = 13
    RULE_float_number = 14

    ruleNames =  [ "program", "const", "var", "procedure", "block", "statement", 
                   "assign", "expression", "call", "write", "ifthen", "ifthenelse", 
                   "whiledo", "condition", "float_number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    LPAREN=16
    RPAREN=17
    WS=18
    ID=19
    NUMBER=20
    CONST=21
    VAR=22
    PROCEDURE=23
    CALL=24
    BEGIN=25
    END=26
    IF=27
    THEN=28
    ELSE=29
    WHILE=30
    DO=31
    ODD=32
    WRITE=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.main_const = None # ConstContext
            self.main_var = None # VarContext

        def block(self):
            return self.getTypedRuleContext(expl0Parser.BlockContext,0)


        def procedure(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expl0Parser.ProcedureContext)
            else:
                return self.getTypedRuleContext(expl0Parser.ProcedureContext,i)


        def const(self):
            return self.getTypedRuleContext(expl0Parser.ConstContext,0)


        def var(self):
            return self.getTypedRuleContext(expl0Parser.VarContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = expl0Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 30
                localctx.main_const = self.const()


            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 33
                localctx.main_var = self.var()


            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 36
                self.procedure()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.block()
            self.state = 43
            self.match(expl0Parser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(expl0Parser.CONST, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(expl0Parser.ID)
            else:
                return self.getToken(expl0Parser.ID, i)

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(expl0Parser.NUMBER)
            else:
                return self.getToken(expl0Parser.NUMBER, i)

        def float_number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expl0Parser.Float_numberContext)
            else:
                return self.getTypedRuleContext(expl0Parser.Float_numberContext,i)


        def getRuleIndex(self):
            return expl0Parser.RULE_const

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst" ):
                listener.enterConst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst" ):
                listener.exitConst(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConst" ):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)




    def const(self):

        localctx = expl0Parser.ConstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_const)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(expl0Parser.CONST)
            self.state = 46
            self.match(expl0Parser.ID)
            self.state = 47
            self.match(expl0Parser.T__1)

            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 48
                self.match(expl0Parser.NUMBER)


            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 51
                self.float_number()


            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 54
                self.match(expl0Parser.T__2)
                self.state = 55
                self.match(expl0Parser.ID)
                self.state = 56
                self.match(expl0Parser.T__1)

                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 57
                    self.match(expl0Parser.NUMBER)


                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 60
                    self.float_number()


                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 68
            self.match(expl0Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(expl0Parser.VAR, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(expl0Parser.ID)
            else:
                return self.getToken(expl0Parser.ID, i)

        def getRuleIndex(self):
            return expl0Parser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)




    def var(self):

        localctx = expl0Parser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(expl0Parser.VAR)
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(expl0Parser.ID)
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 72
                    self.match(expl0Parser.T__2)
                    self.state = 73
                    self.match(expl0Parser.ID)
                    self.state = 78
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 79
                self.match(expl0Parser.T__4)
                self.state = 80
                self.match(expl0Parser.T__5)
                self.state = 81
                self.match(expl0Parser.T__3)


            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==19:
                self.state = 84
                self.match(expl0Parser.ID)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 85
                    self.match(expl0Parser.T__2)
                    self.state = 86
                    self.match(expl0Parser.ID)
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(expl0Parser.T__4)
                self.state = 93
                self.match(expl0Parser.T__6)
                self.state = 94
                self.match(expl0Parser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.procedure_id = None # Token
            self.proc_const = None # ConstContext
            self.proc_var = None # VarContext

        def PROCEDURE(self):
            return self.getToken(expl0Parser.PROCEDURE, 0)

        def block(self):
            return self.getTypedRuleContext(expl0Parser.BlockContext,0)


        def ID(self):
            return self.getToken(expl0Parser.ID, 0)

        def const(self):
            return self.getTypedRuleContext(expl0Parser.ConstContext,0)


        def var(self):
            return self.getTypedRuleContext(expl0Parser.VarContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_procedure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedure" ):
                listener.enterProcedure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedure" ):
                listener.exitProcedure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedure" ):
                return visitor.visitProcedure(self)
            else:
                return visitor.visitChildren(self)




    def procedure(self):

        localctx = expl0Parser.ProcedureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_procedure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(expl0Parser.PROCEDURE)
            self.state = 98
            localctx.procedure_id = self.match(expl0Parser.ID)
            self.state = 99
            self.match(expl0Parser.T__3)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 100
                localctx.proc_const = self.const()


            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 103
                localctx.proc_var = self.var()


            self.state = 106
            self.block()
            self.state = 107
            self.match(expl0Parser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(expl0Parser.BEGIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expl0Parser.StatementContext)
            else:
                return self.getTypedRuleContext(expl0Parser.StatementContext,i)


        def END(self):
            return self.getToken(expl0Parser.END, 0)

        def getRuleIndex(self):
            return expl0Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = expl0Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(expl0Parser.BEGIN)
            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.statement()
                    self.state = 111
                    self.match(expl0Parser.T__3) 
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 118
            self.statement()
            self.state = 119
            self.match(expl0Parser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(expl0Parser.AssignContext,0)


        def call(self):
            return self.getTypedRuleContext(expl0Parser.CallContext,0)


        def ifthen(self):
            return self.getTypedRuleContext(expl0Parser.IfthenContext,0)


        def ifthenelse(self):
            return self.getTypedRuleContext(expl0Parser.IfthenelseContext,0)


        def whiledo(self):
            return self.getTypedRuleContext(expl0Parser.WhiledoContext,0)


        def write(self):
            return self.getTypedRuleContext(expl0Parser.WriteContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = expl0Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.ifthen()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.ifthenelse()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.whiledo()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 126
                self.write()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(expl0Parser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(expl0Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = expl0Parser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(expl0Parser.ID)
            self.state = 130
            self.match(expl0Parser.T__7)
            self.state = 131
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ExpressionContext
            self.op = None # Token
            self.right = None # ExpressionContext

        def ID(self):
            return self.getToken(expl0Parser.ID, 0)

        def NUMBER(self):
            return self.getToken(expl0Parser.NUMBER, 0)

        def float_number(self):
            return self.getTypedRuleContext(expl0Parser.Float_numberContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expl0Parser.ExpressionContext)
            else:
                return self.getTypedRuleContext(expl0Parser.ExpressionContext,i)


        def getRuleIndex(self):
            return expl0Parser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = expl0Parser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                self.state = 134
                self.match(expl0Parser.ID)
                pass

            elif la_ == 2:
                self.state = 136
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                if la_ == 1:
                    self.state = 135
                    self.match(expl0Parser.NUMBER)


                self.state = 139
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                if la_ == 1:
                    self.state = 138
                    self.float_number()


                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 148
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = expl0Parser.ExpressionContext(self, _parentctx, _parentState)
                    localctx.left = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                    self.state = 143
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 144
                    localctx.op = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7680) != 0)):
                        localctx.op = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 145
                    localctx.right = self.expression(2) 
                self.state = 150
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALL(self):
            return self.getToken(expl0Parser.CALL, 0)

        def ID(self):
            return self.getToken(expl0Parser.ID, 0)

        def getRuleIndex(self):
            return expl0Parser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = expl0Parser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(expl0Parser.CALL)
            self.state = 152
            self.match(expl0Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(expl0Parser.WRITE, 0)

        def ID(self):
            return self.getToken(expl0Parser.ID, 0)

        def NUMBER(self):
            return self.getToken(expl0Parser.NUMBER, 0)

        def float_number(self):
            return self.getTypedRuleContext(expl0Parser.Float_numberContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)




    def write(self):

        localctx = expl0Parser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_write)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(expl0Parser.WRITE)
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.state = 155
                self.match(expl0Parser.ID)
                pass
            elif token in [4, 20, 26, 29]:
                self.state = 157
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
                if la_ == 1:
                    self.state = 156
                    self.match(expl0Parser.NUMBER)


                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==20:
                    self.state = 159
                    self.float_number()


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfthenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.if_body = None # BlockContext

        def IF(self):
            return self.getToken(expl0Parser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(expl0Parser.ConditionContext,0)


        def THEN(self):
            return self.getToken(expl0Parser.THEN, 0)

        def statement(self):
            return self.getTypedRuleContext(expl0Parser.StatementContext,0)


        def block(self):
            return self.getTypedRuleContext(expl0Parser.BlockContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_ifthen

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfthen" ):
                listener.enterIfthen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfthen" ):
                listener.exitIfthen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfthen" ):
                return visitor.visitIfthen(self)
            else:
                return visitor.visitChildren(self)




    def ifthen(self):

        localctx = expl0Parser.IfthenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifthen)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(expl0Parser.IF)
            self.state = 165
            self.condition()
            self.state = 166
            self.match(expl0Parser.THEN)
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.state = 167
                localctx.if_body = self.block()
                pass
            elif token in [19, 24, 27, 30, 33]:
                self.state = 168
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfthenelseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.if_body = None # BlockContext
            self.if_st = None # StatementContext
            self.else_body = None # BlockContext
            self.else_st = None # StatementContext

        def IF(self):
            return self.getToken(expl0Parser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(expl0Parser.ConditionContext,0)


        def THEN(self):
            return self.getToken(expl0Parser.THEN, 0)

        def ELSE(self):
            return self.getToken(expl0Parser.ELSE, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expl0Parser.BlockContext)
            else:
                return self.getTypedRuleContext(expl0Parser.BlockContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(expl0Parser.StatementContext)
            else:
                return self.getTypedRuleContext(expl0Parser.StatementContext,i)


        def getRuleIndex(self):
            return expl0Parser.RULE_ifthenelse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfthenelse" ):
                listener.enterIfthenelse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfthenelse" ):
                listener.exitIfthenelse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfthenelse" ):
                return visitor.visitIfthenelse(self)
            else:
                return visitor.visitChildren(self)




    def ifthenelse(self):

        localctx = expl0Parser.IfthenelseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifthenelse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(expl0Parser.IF)
            self.state = 172
            self.condition()
            self.state = 173
            self.match(expl0Parser.THEN)
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.state = 174
                localctx.if_body = self.block()
                pass
            elif token in [19, 24, 27, 30, 33]:
                self.state = 175
                localctx.if_st = self.statement()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 178
            self.match(expl0Parser.ELSE)
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.state = 179
                localctx.else_body = self.block()
                pass
            elif token in [19, 24, 27, 30, 33]:
                self.state = 180
                localctx.else_st = self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhiledoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.while_body = None # BlockContext

        def WHILE(self):
            return self.getToken(expl0Parser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(expl0Parser.ConditionContext,0)


        def DO(self):
            return self.getToken(expl0Parser.DO, 0)

        def statement(self):
            return self.getTypedRuleContext(expl0Parser.StatementContext,0)


        def block(self):
            return self.getTypedRuleContext(expl0Parser.BlockContext,0)


        def getRuleIndex(self):
            return expl0Parser.RULE_whiledo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhiledo" ):
                listener.enterWhiledo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhiledo" ):
                listener.exitWhiledo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhiledo" ):
                return visitor.visitWhiledo(self)
            else:
                return visitor.visitChildren(self)




